--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^19.0.9"
   },
   "dependencies": {
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "socket.io": "^4.5.1"
   }
 }
